--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .gauge {
-  background: linear-gradient(to right, #e84c3d, #f1c40f, #9baa1e, #1eaa59);
+  background: linear-gradient(to right, #da805a, #daaf5a, #b9d85a, #87d85f);
   width: 320px;
   height: 160px;
   border-radius: 160px 160px 0 0;
@@ -25,7 +25,7 @@
 .needle {
   width: 150px;
   height: 7px;
-  background: #15222e;
+  background: #b3b2b5;
   border-bottom-left-radius: 100%;
   border-bottom-right-radius: 5px;
   border-top-left-radius: 100%;
@@ -34,6 +34,18 @@
   bottom: 4px;
   left: 10px;
   transform-origin: 100% 4px;
+  box-shadow: 0 2px 2px 1px #00000061;
+}
+
+.needle:before {
+  content: '';
+  position: absolute;
+  top: -6px;
+  right: -6px;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: #b3b2b5;
   box-shadow: 0 2px 2px 1px #00000061;
 }
 
@@ -47,9 +59,9 @@
   background: #15222e;
   color: #fff;
   padding: 4px;
-  width: 32px;
-  height: 32px;
+  width: 34px;
+  height: 34px;
   z-index: 10;
   text-align: center;
-  line-height: 22px;
+  line-height: 25px;
 }
